# fs

./: docker-compose.yml  lucius_command_intelligence_orchestrator_consolidated_implementation_blueprint.md  lucius_command_intelligence_orchestrator_consolidated_implementation_blueprint_p2.md
docs/: FLOW_CANVAS.md  LUCIUS_OPTIONB_INVOKER_SPEC.md  LUCIUS_TEMPORAL_WORKFLOW_SPEC.md  OPERATIONS.md  ROADMAP.md  ledger-state-model.md  phase2-implementation.md  phase4-platform-skeleton.md  table-storage-schema.md
docs/contracts/: command-envelope.v1.schema.json  directive.v1.schema.json  result.v1.schema.json
docs/protocols/: protocol-registry.v1.example.json  protocol-registry.v1.schema.json
services/: compose  conftest.py
services/distributed-ocr/: Dockerfile  README.md  pyproject.toml
services/embedding/: Dockerfile  README.md  pyproject.toml
services/lucius-dispatcher/: Dockerfile  README.md  pyproject.toml
services/lucius-dispatcher/src/lucius_dispatcher/app/: dispatcher.py  runner.py  service.py  sweepers.py
services/lucius-dispatcher/src/store/: stores.py
services/lucius-dispatcher/src/worker/: __init__.py  publisher.py  runner.py
services/lucius-dispatcher/tests/: conftest.py
services/lucius-dispatcher/tests/unit/: test_dispatcher.py  test_sweepers.py
services/lucius-orchestrator/: Dockerfile  README.md  requirements.txt
services/lucius_dispatcher/: Dockerfile  README.md  __init__.py  pyproject.toml
services/lucius_orchestrator/: Dockerfile  README.md  __init__.py
services/ocr/: Dockerfile  pyproject.toml
tests/: conftest.py
(+121 files in other folders)
